--- a/style.css
+++ b/style.css
@@ -195,8 +195,13 @@ footer .copyright {
     }
 
     .profile-card {
-        width: 160px;
-        height: 180px;
+        width: 90%;
+        margin-bottom: 20px;
+    }
+
+    .card-grid {
+        flex-direction: column;
+        align-items: center;
     }
 
     h2 {
