--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
     color: #1f2937;
     background-color: #f9fafb;
     overflow-x: hidden;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 /* Headers */
